<resources>
    <string name="app_name">Healthy cafe</string>

    <string name="dish_name">Название</string>
    <string name="dish_weight">Вес</string>
    <string name="dish_price">Цена</string>
    <string name="dish_information_text">Информация о блюде</string>
    <string name="dish_ingredients_text">Ингредиенты</string>
    <string name="dish_nutritional_value">Пищевая ценность</string>
    <string name="dish_calories">Калории</string>
    <string name="dish_proteins">Белки</string>
    <string name="dish_fats">Жиры</string>
    <string name="dish_carbohydrates">Углеводы</string>

    <string name="title_save">Сохранить</string>
    <string name="title_edit">Редактировать</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_fill_all_fields">Заполните все поля</string>

    <string name="title_delete">Удалить</string>
    <string name="btn_delete">-</string>
    <string name="btn_add">+</string>

    <string name="title_activity_info">Информация о блюде</string>
    <string name="title_activity_main">Меню</string>
    <string name="title_activity_orders">Заказы</string>
    <string name="title_activity_create_order">Создать заказ</string>
    <string name="title_activity_create_dish">Создать блюдо</string>
    <string name="title_activity_dish_calories_calc">Расчет калорийности</string>

    <string name="menu_item_next">Далее</string>

    <string name="add_ingredient_title">Введите название ингредиента</string>
    <string name="add_ingredient_hint">Название</string>

    <string name="order_table">Номер стола</string>
    <string name="order_lead_time">Время выполнения</string>
    <string name="order_waiter">Официант</string>
    <string name="order_price">Сумма</string>
    <string name="order_dishes">Блюда</string>
    <string name="order_number">Заказ</string>
    <string name="order_created">Время заказа</string>
    <string name="order_dishes_list_title">Блюда:</string>

    <string name="message_edit_dish">Информация изменена</string>
    <string name="btn_ok">Ок</string>
    <string name="message_dish_saved">Блюдо добавлено</string>
    <string name="dish_weight_">Вес:</string>
    <string name="dish_waiter">Повар</string>
    <string name="message_dish_deleted">Блюдо удалено</string>
</resources>
